# chatbot_sa

./: .gitignore  docker-compose-EC2.yml  docker-compose.override.yml  docker-compose.yml  run_local.sh
.github/workflows/: deploy-bot.yml  deploy-crawlers.yml  deploy-infrastructure.yml  deploy-rag-api.yml  deploy.yml
bash_scripts/: ssh_for_github.sh
bot/: .dockerignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt  telegram_bot.py
commands/: commands.txt  links.txt
crawlers/gringo/: Dockerfile  crawler.py  entrypoint.sh  pyproject.toml
crawlers/gringo_fetcher/: Dockerfile  entrypoint.sh  fetcher.py  pyproject.toml  sitemap.xml
crawlers/gringo_parser/: Dockerfile  entrypoint.sh  parser.py  pyproject.toml
db/init/: 001_schema.sql  002_gringo_init.sql  002_schema.sql  003_gringo_raw_pages.sql  004_gringo_sitemap_cache.sql  01_init.sql  02_gringo_init.sql
rag_api/: Dockerfile  entrypoint.sh  pyproject.toml  rag_api.py  requirements.txt
scripts/: add_ec2_ssh_permissions.sh
telegram_bot/: bot.py
