[tool.poetry]
name = "chatbot-sa"
version = "0.1.0"
description = ""
authors = ["Noam Salomonski"]
readme = "README.md"
packages = [{include = "chatbot_sa"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
six = "^1.17.0"
python-telegram-bot = "^20.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
