[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = "Telegram bot with RAG capabilities"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = ">=20.7"
fastapi = ">=0.109.2"
uvicorn = ">=0.27.1"
python-dotenv = ">=1.0.1"
requests = ">=2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
